--- a/app/src/main/res/layout/fragment_setup_phone_fragment_number.xml
+++ b/app/src/main/res/layout/fragment_setup_phone_fragment_number.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SetupPhoneFragmentNumber">
+    tools:context=".Fragments.SetupPhoneFragmentNumber">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -18,6 +18,7 @@
             android:layout_height="50dp"
             android:ems="10"
             android:inputType="phone"
+            android:gravity="center_horizontal"
             android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
