--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#808fa4</color>
     <color name="colorPrimaryDark">#535d6b</color>
     <color name="colorAccent">#202e3e</color>
+    <color name="colorActive">#527fb2</color>
 </resources>
