--- a/app/src/main/res/layout/fragment_setup_phone_fragment_permission.xml
+++ b/app/src/main/res/layout/fragment_setup_phone_fragment_permission.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.SetupPhoneFragmentPermission">
+    tools:context=".Fragments.SetupFragments.SetupPhoneFragmentPermission">
 
     <!-- TODO: Update blank fragment layout -->
 
