--- a/app/src/main/res/layout/fragment_menu_surrounds.xml
+++ b/app/src/main/res/layout/fragment_menu_surrounds.xml
@@ -17,16 +17,19 @@
             android:id="@+id/swipeRefreshLyt"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <LinearLayout
-                android:id="@+id/postsContainer"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </ScrollView>
+                android:layout_height="match_parent"
+                android:scrollbarAlwaysDrawHorizontalTrack="false"
+                android:scrollbarAlwaysDrawVerticalTrack="false">
+
+                <LinearLayout
+                    android:id="@+id/postsContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" />
+            </ScrollView>
         </android.support.v4.widget.SwipeRefreshLayout>
 
         <com.github.clans.fab.FloatingActionMenu
