Added few fragments to setup text

--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -22,6 +22,7 @@
             android:layout_marginLeft="6dp"
             android:layout_marginTop="6dp"
             android:src="@drawable/logo"
+            android:padding="2dp"
             app:civ_border_color="#bfcbd9"
             app:civ_border_width="1dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -139,7 +140,9 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/post_content"
             android:gravity="left"
+            android:padding="7dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/post_contentTypeImg"
             app:layout_constraintStart_toStartOf="parent"
@@ -150,8 +153,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
                 android:gravity="left"
                 android:text="User's own content text / title"
                 android:textSize="12sp"
@@ -161,10 +162,7 @@
                 android:id="@+id/post_contentImg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="5dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_launcher_background" />
