--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -15,7 +15,7 @@
         android:background="#bfcbd9">
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/post_profileImg"
+            android:id="@+id/profileProfileImg"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginStart="6dp"
@@ -37,7 +37,7 @@
             android:layout_marginTop="6dp"
             android:text="User's name"
             android:textSize="12sp"
-            app:layout_constraintStart_toEndOf="@+id/post_profileImg"
+            app:layout_constraintStart_toEndOf="@+id/profileProfileImg"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -49,7 +49,7 @@
             android:text="User's location"
             android:textSize="12sp"
             android:textStyle="italic"
-            app:layout_constraintStart_toEndOf="@+id/post_profileImg"
+            app:layout_constraintStart_toEndOf="@+id/profileProfileImg"
             app:layout_constraintTop_toBottomOf="@+id/post_nameTxt" />
 
         <TextView
@@ -63,7 +63,7 @@
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/post_profileImg" />
+            app:layout_constraintTop_toBottomOf="@+id/profileProfileImg" />
 
         <ImageButton
             android:id="@+id/post_likeBtn"
