--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -19,15 +19,15 @@
 
     <ImageButton
         android:id="@+id/newPostNextBtn"
-        android:layout_width="82dp"
+        android:layout_width="129dp"
         android:layout_height="78dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
+        android:contentDescription="Arrow_right"
         android:scaleType="fitCenter"
         android:src="@drawable/arrow_right"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="Arrow_right"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
