--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -134,34 +134,27 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/post_content"
             android:gravity="left"
-            android:padding="7dp"
             android:orientation="vertical"
+            android:padding="7dp"
             app:layout_constraintBottom_toTopOf="@+id/post_contentTypeImg"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/post_titleTxt">
-
-            <TextView
-                android:id="@+id/post_contentTxt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:gravity="left"
-                android:text="User's own content text / title"
-                android:textSize="12sp"
-                android:textStyle="italic" />
 
             <ImageView
                 android:id="@+id/post_contentImg"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
