--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -15,14 +15,14 @@
         android:background="#bfcbd9">
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/profileProfileImg"
+            android:id="@+id/postActivity_profileImg"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginStart="6dp"
             android:layout_marginLeft="6dp"
             android:layout_marginTop="6dp"
-            android:src="@drawable/logo"
             android:padding="2dp"
+            android:src="@drawable/loading_gif"
             app:civ_border_color="#bfcbd9"
             app:civ_border_width="1dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
             android:layout_marginTop="6dp"
             android:text="User's name"
             android:textSize="12sp"
-            app:layout_constraintStart_toEndOf="@+id/profileProfileImg"
+            app:layout_constraintStart_toEndOf="@+id/postActivity_profileImg"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -49,7 +49,7 @@
             android:text="User's location"
             android:textSize="12sp"
             android:textStyle="italic"
-            app:layout_constraintStart_toEndOf="@+id/profileProfileImg"
+            app:layout_constraintStart_toEndOf="@+id/postActivity_profileImg"
             app:layout_constraintTop_toBottomOf="@+id/post_nameTxt" />
 
         <TextView
@@ -63,7 +63,7 @@
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profileProfileImg" />
+            app:layout_constraintTop_toBottomOf="@+id/postActivity_profileImg" />
 
         <ImageButton
             android:id="@+id/post_likeBtn"
@@ -158,7 +158,7 @@
                 android:layout_marginTop="5dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_launcher_background" />
+                android:src="@drawable/loading_gif" />
         </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
