--- a/app/src/main/res/layout/fragment_new_post_search_web.xml
+++ b/app/src/main/res/layout/fragment_new_post_search_web.xml
@@ -4,49 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.NewPostFragments.NewPostTitleTextFragment">
+    tools:context=".Fragments.NewPostFragments.NewPostSearchWebFragment">
+
+    <!-- TODO: Update blank fragment layout -->
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/urlEditText"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="Give a title to your post"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
+            android:ems="10"
+            android:hint="Search or insert URL here"
+            android:inputType="text"
+            android:imeOptions="actionSearch"
+            android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/newPostTitleEditText"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        <WebView
+            android:id="@+id/webView"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="0dp"
             android:layout_marginStart="8dp"
-            android:foregroundGravity="center_vertical"
-            android:textSize="20sp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:background="@drawable/text_box_input_bg"
-            android:ems="10"
-            android:gravity="start"
-            android:inputType="textMultiLine"
-            android:singleLine="true"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView15" />
-
+            app:layout_constraintTop_toBottomOf="@+id/urlEditText"
+            app:layout_constraintVertical_bias="1.0" />
     </android.support.constraint.ConstraintLayout>
-
 </FrameLayout>
